--- a/testowy/Saved/Config/Windows/EditorUserSettings.ini
+++ b/testowy/Saved/Config/Windows/EditorUserSettings.ini
@@ -364,7 +364,7 @@ HTTP.TimeStamp=2014.09.17-15.01.44
 HTTP.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
